syntax = "proto3";

package pvz_service;

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Turalchik/pvz-service/pkg/pvz_service;pvz_service";

service PVZService {
  rpc Register(RegisterRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CreatePVZ(CreatePVZRequest) returns (CreatePVZResponse);
  rpc OpenReception(OpenReceptionRequest) returns (google.protobuf.Empty);
  rpc AddItem(AddItemRequest) returns (google.protobuf.Empty);
  rpc RemoveItem(RemoveItemRequest) returns (google.protobuf.Empty);
  rpc CloseReception(CloseReceptionRequest) returns (google.protobuf.Empty);
  rpc GetPVZData(GetPVZDataRequest) returns (GetPVZDataResponse);
}

message PVZ {
  string idPVZ = 1;
  google.protobuf.Timestamp registration_date = 2;
  string city = 3 [(validate.rules).string = {in: ["Москва", "Санкт-Петербург", "Казань"]}];
}

message Reception {
  enum ReceptionStatus {
    RECEPTION_STATUS_IN_PROGRESS = 0;
    RECEPTION_STATUS_CLOSED = 1;
  }
  string idReception = 1;
  google.protobuf.Timestamp openingTime = 2;
  google.protobuf.Timestamp closingTime = 3;
  string idPVZ = 4;
  repeated Item items = 5;
  ReceptionStatus status = 6;
}

message Item {
  string idItem = 1;
  google.protobuf.Timestamp receptionTime = 2;
  string type = 3 [(validate.rules).string = {in: ["электроника", "одежда", "обувь"]}];
}

message RegisterRequest {
  string login = 1;
  string password = 2 [(validate.rules).string = {min_len: 8, max_len: 32}];
  string role = 3;
}

message LoginRequest {
  string login = 1;
  string password = 2 [(validate.rules).string = {min_len: 8, max_len: 32}];
}
message LoginResponse {
  string token = 1;
}

message CreatePVZRequest {
  string city = 1 [(validate.rules).string = {in: ["Москва", "Санкт-Петербург", "Казань"]}];
}
message CreatePVZResponse {
  string idPVZ = 1;
}

message OpenReceptionRequest {
  string idPVZ = 1;
}

message AddItemRequest {
  string idPVZ = 1;
  string type = 2 [(validate.rules).string = {in: ["электроника", "одежда", "обувь"]}];
}
message AddItemResponse {
  string idItem = 1;
}

message RemoveItemRequest {
  string idItem = 1;
}

message CloseReceptionRequest {
  string idPVZ = 1;
}

message GetPVZDataRequest {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp finish = 2;
}
message GetPVZDataResponse {
  repeated PVZ pvzs = 1;
}
